package FactoryDesignPattern;

public abstract class Burger {
    public abstract void prepare();
}
